<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/MainLayoutAppearance"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.courtcounter.MainActivity"
    >

    <LinearLayout style="@style/ScoreBoardAppearance"
        >

        <LinearLayout style="@style/TeamLayoutAppearance">
            <TextView
                android:id="@+id/team_a_label"
                style="@style/TeamNameAppearance"
                android:text="@string/team_a_name"
                />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/TeamScoreAppearance" />

            <Button
                android:id="@+id/three_points_to_a"
                style="@style/ScoreButtonAppearance"
                android:onClick="addThreeForTeamA"
                android:text="@string/three_points_button_text" />

            <Button
                android:id="@+id/two_points_to_a"
                style="@style/ScoreButtonAppearance"
                android:onClick="addTwoForTeamA"
                android:text="@string/two_points_button_text" />

            <Button
                android:id="@+id/free_throw_to_a"
                style="@style/ScoreButtonAppearance"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw_button_text" />
        </LinearLayout>

        <View style="@style/ScoreBoardSeparatorAppearance"
            />

        <LinearLayout style="@style/TeamLayoutAppearance">

            <TextView
                android:id="@+id/team_b_label"
                style="@style/TeamNameAppearance"
                android:text="@string/team_b_name" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/TeamScoreAppearance" />

            <Button
                android:id="@+id/three_points_to_b"
                style="@style/ScoreButtonAppearance"
                android:onClick="addThreeForTeamB"
                android:text="@string/three_points_button_text" />

            <Button
                android:id="@+id/two_points_to_b"
                style="@style/ScoreButtonAppearance"
                android:onClick="addTwoForTeamB"
                android:text="@string/two_points_button_text" />

            <Button
                android:id="@+id/free_throw_to_b"
                style="@style/ScoreButtonAppearance"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw_button_text" />
        </LinearLayout>

    </LinearLayout>

    <Button style="@style/ResetButtonAppearance"
        android:id="@+id/reset_score"
        android:text="@string/reset_button_text"
        android:onClick="resetScore"
        />

</RelativeLayout>
